--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -44,6 +44,7 @@
         <div class="body">
             {% block body %}
             {% endblock %}
+            <script type="text/javascript" src="{% static 'network/script.js' %}"></script>
         </div>
     </body>
 </html>
