--- a/network/templates/network/all_posts.html
+++ b/network/templates/network/all_posts.html
@@ -5,7 +5,7 @@
 
     {% for post in posts %}
     <div class="post">
-        <p><b>{{ post.user.username }}</b> - {{ post.timestamp }}</p>
+        <p><a href="{% url 'profile' post.user.username %}"><b>{{ post.user.username }}</b></a> - {{ post.timestamp }}</p>
         <p>{{ post.content }}</p>
         <p>Likes: {{ post.likes }}</p>
         </div>
