--- a/network/templates/network/all_posts.html
+++ b/network/templates/network/all_posts.html
@@ -5,9 +5,18 @@
 
     {% for post in posts %}
     <div class="post">
-        <p><a href="{% url 'profile' post.user.username %}"><b>{{ post.user.username }}</b></a> - {{ post.timestamp }}</p>
-        <p>{{ post.content }}</p>
-        <p>Likes: {{ post.likes }}</p>
+        <p><a href="{% url 'profile' post.post.user.username %}"><b>{{ post.post.user.username }}</b></a> - {{ post.post.timestamp }}</p>
+        <p>{{ post.post.content }}</p>
+        {% if user.is_authenticated %}
+            <button class="like-button" data-post-id="{{ post.post.id }}" onclick="handleLiking(event)">
+                {% if post.already_liked == True %}
+                    Unlike
+                {% else %}
+                    Like
+                {% endif %}
+            </button>
+        {% endif %}
+        <p id="like-count-{{ post.post.id }}">Likes: {{ post.post.likes }}</p>
         </div>
     {% endfor %}
 
