Ad "Edit" button fow user's own posts

--- a/network/templates/network/all_posts.html
+++ b/network/templates/network/all_posts.html
@@ -8,6 +8,9 @@
         <p><a href="{% url 'profile' post.post.user.username %}"><b>{{ post.post.user.username }}</b></a> - {{ post.post.timestamp }}</p>
         <p>{{ post.post.content }}</p>
         {% if user.is_authenticated %}
+            {% if post.post.user == user %}
+                <p><a href="#">Edit</a></p>
+            {% endif %}
             <button class="like-button" data-post-id="{{ post.post.id }}" onclick="handleLiking(event)">
                 {% if post.already_liked == True %}
                     Unlike
