--- a/network/templates/network/all_posts.html
+++ b/network/templates/network/all_posts.html
@@ -3,6 +3,30 @@
 {% block body %}
     <h1>All Posts</h1>
 
+    {% if paginator.num_pages > 1 %}
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+        {% if posts.has_previous %}
+            <li class="page-item"><a class="page-link" href="?page={{ posts.previous_page_number }}">&laquo;</a></li>
+        {% else %}
+            <li class="page-item not-allowed"><a class="page-link text-muted">&laquo;</a></li>
+        {% endif %}
+        
+        {% for page_num in paginator.page_range %}
+            <li class="page-item {% if page_num == posts.number %}active{% endif %}">
+            <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+            </li>
+        {% endfor %}
+        
+        {% if posts.has_next %}
+            <li class="page-item not-allowed"><a class="page-link" href="?page={{ posts.next_page_number }}">&raquo;</a></li>
+        {% else %}
+            <li class=""><a class="page-link text-muted">&raquo;</a></li>
+        {% endif %}
+        </ul>
+    </nav>
+    {% endif %}
+
     {% for post in posts %}
     <div class="post">
         <p><a href="{% url 'profile' post.post.user.username %}"><b>{{ post.post.user.username }}</b></a> - {{ post.post.timestamp }}</p>
