--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -45,22 +45,22 @@
             <div class="post px-4 py-2 border border border-secondary rounded bg-light mb-2 w-100">
                 <p class="mb-0 d-inline-block mr-3"><a href="{% url 'profile' post.post.user.username %}"><strong>{{ post.post.user.username }}</strong></a></p>
                 {% if post.post.user == user %}
-                    <button class="edit-button btn btn-sm btn-outline-secondary" data-post-id="{{ post.post.id }}" onclick="onPostEdit(event)">
+                    <button class="edit-button btn btn-sm btn-outline-secondary border-0" data-post-id="{{ post.post.id }}" onclick="onPostEdit(event)">
                         <i class="bi bi-pencil"></i>
                     </button>
                 {% endif %}
                 <p class="text-muted mt-0">{{ post.post.timestamp }}</p>
                 <p id="post-content-{{ post.post.id }}">{{ post.post.content }}</p>
                 {% if user.is_authenticated %}
-                    <button class="like-button" data-post-id="{{ post.post.id }}" onclick="handleLiking(event)">
+                    <button class="like-button border-0 bg-light" data-post-id="{{ post.post.id }}" onclick="handleLiking(event)">
                         {% if post.already_liked == True %}
-                            Unlike
+                            <i class="bi bi-heart-fill text-danger"></i>
                         {% else %}
-                            Like
+                            <i class="bi bi-heart text-danger"></i>
                         {% endif %}
                     </button>
                 {% endif %}
-                <p id="like-count-{{ post.post.id }}">Likes: {{ post.post.likes }}</p>
+                <p class="ml-2" id="like-count-{{ post.post.id }}">{{ post.post.likes }}</p>
             </div>
         {% endfor %}
     </div>
