--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -1,5 +1,9 @@
 {% extends "network/layout.html" %}
 
+{% block title %}
+    Profile: {{ profile_user.username }}
+{% endblock %}
+
 {% block body %}
     <h1>{{ profile_user.username }}</h1>
 
@@ -59,8 +63,10 @@
                             <i class="bi bi-heart text-danger"></i>
                         {% endif %}
                     </button>
+                    <p class="ml-2" id="like-count-{{ post.post.id }}">{{ post.post.likes }}</p>
+                {% else %}
+                    <p id="like-count-{{ post.post.id }}"><i class="bi bi-heart text-danger"></i> &nbsp;{{ post.post.likes }}</p>                    
                 {% endif %}
-                <p class="ml-2" id="like-count-{{ post.post.id }}">{{ post.post.likes }}</p>
             </div>
         {% endfor %}
     </div>
