--- a/network/templates/network/all_posts.html
+++ b/network/templates/network/all_posts.html
@@ -20,9 +20,9 @@
     <nav aria-label="Page navigation example">
         <ul class="pagination">
         {% if posts.has_previous %}
-            <li class="page-item"><a class="page-link" href="?page={{ posts.previous_page_number }}">&laquo;</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{ posts.previous_page_number }}">&laquo; Previous</a></li>
         {% else %}
-            <li class="page-item not-allowed"><a class="page-link text-muted">&laquo;</a></li>
+            <li class="page-item disabled"><a class="page-link text-muted">&laquo; Previous</a></li>
         {% endif %}
         
         {% for page_num in paginator.page_range %}
@@ -32,9 +32,9 @@
         {% endfor %}
         
         {% if posts.has_next %}
-            <li class="page-item not-allowed"><a class="page-link" href="?page={{ posts.next_page_number }}">&raquo;</a></li>
+            <li class="page-item not-allowed"><a class="page-link" href="?page={{ posts.next_page_number }}">Next &raquo;</a></li>
         {% else %}
-            <li class=""><a class="page-link text-muted">&raquo;</a></li>
+            <li class="page-item disabled"><a class="page-link text-muted">Next &raquo;</a></li>
         {% endif %}
         </ul>
     </nav>
@@ -42,7 +42,7 @@
 
     <div class="post-container">
         {% for post in posts %}
-        <div class="post px-4 py-2 border border border-secondary rounded bg-light mb-2 w-100">
+        <div class="post px-4 py-2 border border border-secondary rounded bg-light mb-4 w-100">
             <p class="mb-0 d-inline-block mr-3"><a href="{% url 'profile' post.post.user.username %}"><strong>{{ post.post.user.username }}</strong></a></p>
             {% if post.post.user == user %}
                 <button class="edit-button btn btn-sm btn-outline-secondary border-0" data-post-id="{{ post.post.id }}" onclick="onPostEdit(event)">
@@ -50,7 +50,7 @@
                 </button>
             {% endif %}
             <p class="text-muted mt-0">{{ post.post.timestamp }}</p>
-            <p id="post-content-{{ post.post.id }}">{{ post.post.content }}</p>
+            <p class="h4" id="post-content-{{ post.post.id }}">{{ post.post.content }}</p>
             {% if user.is_authenticated %}
                 <button class="like-button border-0 bg-light" data-post-id="{{ post.post.id }}" onclick="handleLiking(event)">
                     {% if post.already_liked == True %}
@@ -66,6 +66,30 @@
         </div>
         {% endfor %}
     </div>
+
+    {% if paginator.num_pages > 1 %}
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+        {% if posts.has_previous %}
+            <li class="page-item"><a class="page-link" href="?page={{ posts.previous_page_number }}">&laquo; Previous</a></li>
+        {% else %}
+            <li class="page-item disabled"><a class="page-link text-muted">&laquo; Previous</a></li>
+        {% endif %}
+        
+        {% for page_num in paginator.page_range %}
+            <li class="page-item {% if page_num == posts.number %}active{% endif %}">
+            <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+            </li>
+        {% endfor %}
+        
+        {% if posts.has_next %}
+            <li class="page-item not-allowed"><a class="page-link" href="?page={{ posts.next_page_number }}">Next &raquo;</a></li>
+        {% else %}
+            <li class="page-item disabled"><a class="page-link text-muted">Next &raquo;</a></li>
+        {% endif %}
+        </ul>
+    </nav>
+    {% endif %}
    
 
 {% endblock %}
